--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
             name="query"
             onfocus="this.value=''"
           />
-          <button id="searchButton">Search</button>
+          <button id="searchButton">
+            <span id="buttonText">Search</span>
+            <span id="buttonIcon"
+              ><ion-icon name="search-outline"></ion-icon
+            ></span>
+          </button>
         </form>
       </section>
 
@@ -40,5 +45,13 @@
     <!--  -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="tvshow.js"></script>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
   </body>
 </html>
